--- a/Bootstrap/Bootstrap 5 Text/test.html
+++ b/Bootstrap/Bootstrap 5 Text/test.html
@@ -9,12 +9,36 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container-fluid">
-        <div class= "position-relative">
-           <h1 class="text-red">ddd</h1>
-        </div>
-        <div class="position-absolute">
-            <h1>dd</h1>
+    <div class="container pt-5">
+        <div class= "row">
+           <div class="col-sm">
+                 <div class="container">
+                    <h2>Best heathy fruits</h2>
+                </div>
+                <div class="container">
+                    <h1>strawberry</h1>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,
+                    by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of
+                    Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum
+                    generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the
+                    Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to
+                    generate Lorem Ipsum which looks reasonable.
+                </p>
+                </div>
+                <div class="container">
+                    <button type="button" class="btn btn-primary">Bye</button>
+                    <ul>
+                        <li>1kg</li>
+                        <li>2kg</li>
+                        <li>4kg</li>
+                        <li>5kg</li>
+                    </ul>
+                </div>
+
+           </div>
+           <div class="col-sm">
+             <img src="https://cdn.pixabay.com/photo/2018/05/26/10/54/strawberries-3431122_960_720.jpg" alt="house of dragon" class="img-fluid rounded-3">
+           </div>
         </div>
     </div>
     
