--- a/Bootstrap/div.html
+++ b/Bootstrap/div.html
@@ -25,7 +25,7 @@
             <img class="d-block m-auto img-fluid rounded-circle" src="https://w0.peakpx.com/wallpaper/651/442/HD-wallpaper-beautiful-nature-beautiful-landscape-love-nature-sweet.jpg" alt="image1">
         </div>
 
-        <div class="bg-dark text-center">
+        <div class="bg-dark text-center py-3">
             <h1 class="text-light">khalid</h1>
         </div>
 
