--- a/Bootstrap/div.html
+++ b/Bootstrap/div.html
@@ -59,15 +59,16 @@
                     quibusdam beatae?
                 </h5>
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-3 bg-secondary p-5 ">
                 <h1>
                     beautiful design
                 </h1>
                 <i class="fa-solid fa-hammer"></i>
-                <h5>
+                <h5 class="py-3">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero temporibus quaerat obcaecati voluptates,
                     quibusdam beatae?
                 </h5>
+                <h6 class="p-2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus modi repudiandae ad laudantium voluptate saepe quibusdam autem tenetur impedit qui?</h6>
             </div>
         </div>
     </div>
