--- a/Bootstrap/Bootstrap 5 Text/image.html
+++ b/Bootstrap/Bootstrap 5 Text/image.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+        integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
 </head>
 <body>
@@ -16,12 +23,30 @@
         </p>
         <div>
             <div>
-                <button>
-                    
-                </button>
+                <div>
+                    <button class="btn btn-primary ">click</button>
+                </div>
             </div>
         </div>
 
     </div>
+
+    <div class="row">
+        <div class="col-lg-3 col-md-6">
+            <h2>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione, dignissimos.</h2>
+        </div>
+        <div class="col-lg-3 col-md-6">
+            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non earum nobis cumque doloremque quam error facilis, in molestiae. Rem, aliquid.</h2>
+        </div>
+        <div class="col-lg-3 col-md-6">
+            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos minus adipisci recusandae natus dolorum beatae inventore suscipit voluptatem, voluptatum quia?</h2>
+        </div>
+        <div class="col-lg-3 col-md-6">
+            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos minus adipisci recusandae natus dolorum
+                beatae inventore suscipit voluptatem, voluptatum quia?</h2>
+        </div>
+        
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
