--- a/Bootstrap/fontend-practice.html
+++ b/Bootstrap/fontend-practice.html
@@ -13,7 +13,7 @@
 <body>
 
     <header>
-                <nav class="navbar navbar-expand-lg bg-dark p-5">
+                <nav class="navbar navbar-expand-lg bg-dark text-danger p-5 ">
                     <div class="container-fluid">
                         <a class="navbar-brand" href="#">Testing</a>
                         
