--- a/Bootstrap/Bootstrap 5 Text/text2.html
+++ b/Bootstrap/Bootstrap 5 Text/text2.html
@@ -12,8 +12,13 @@
             <div class="col-4">
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus exercitationem minus iusto quibusdam natus neque.
-                    
+
                 </p>
+            </div>
+            <div class="col-3">
+                <h1>
+                    khalid
+                </h1>
             </div>
 
         </div>
