--- a/Html/frontend-practice.html
+++ b/Html/frontend-practice.html
@@ -33,6 +33,28 @@
            class="rounded-circle" alt="">
            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos perferendis sapiente voluptate nostrum laborum illo libero culpa omnis, et quasi ipsa laudantium quaerat earum neque esse nisi explicabo sint rem.</p>
     </div>
+    <div style="background-color: #0F3460;">
+        <table class="table table-bordered p-3">
+            <tr style="background-color: #533483 ;">
+                <td>djf</td>
+                <td>ldsf</td>
+                <td>dsk</td>
+                <td>ds,fd</td>
+            </tr>
+                <tr style="background-color: #E94560;">
+                    <td>djf</td>
+                    <td>ldsf</td>
+                    <td>dsk</td>
+                    <td>ds,fd</td>
+                </tr>
+                    <tr>
+                        <td>djf</td>
+                        <td>ldsf</td>
+                        <td>dsk</td>
+                        <td>ds,fd</td>
+                    </tr>
+        </table>
+    </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
