--- a/Bootstrap/practice.html
+++ b/Bootstrap/practice.html
@@ -15,7 +15,10 @@
             </div>
             <div>
                 <h1>lorem</h1>
-                <h2></h2>
+                <h2>skdjsahdsf</h2>
+                <button style="background-color: red;">
+                    red
+                </button>
             </div>
         </div>
     </div>
