--- a/javascript/domelement.html
+++ b/javascript/domelement.html
@@ -8,12 +8,52 @@
 </head>
 <body>
     <div>
-        <h1>
+        <h1 id="head">
             khalid
         </h1>
         <img src="" alt="">
+        <div class="container">
+            <h1 class="header">
+                Name
+            </h1>
+            <ul class="list">
+                <li class="item1">
+                    1
+                </li>
+                <li class="item2">
+                    2
+                </li>
+            </ul>
+        </div>
     </div>
     
-    <script src="domelement.js"></script>
+    <script src="domelement.js">
+
+
+
+//     #include < iostream >
+
+//         using namespace std;
+
+// int main()
+//     {
+//     int a, count = 0;
+//         cin >> a;
+//     int ar[a];
+//         for (int i = 0; i < a; i++)
+//         {
+//             cin >> ar[i];
+//             if (ar[i] == 1) {
+//                 count++;
+//             }
+//         }
+//         if (count == 0) {
+//             cout << "EASY";
+//         }
+//         else {
+//             cout << "HARD";
+//         }
+//     }
+    </script>
 </body>
 </html>
